<resources>
    <string name="app_name">TimeNote</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>

    <string name="user_name">用户名</string>
    <string name="user_pass">密码</string>
    <string name="isRememnerPass">记住密码</string>
    <string name="login">登录</string>
    <string name="login_register">立即注册</string>
    <string name="recover_password">找回密码</string>
    <string name="app_version">timenote -v1.1.1 beta</string>

    <string name="register">注册</string>
    <string name="register_userName">请输入用户名</string>
    <string name="register_userPass">请输入密码</string>
    <string name="register_userPass_confirm">请再次输入密码</string>

    <string name="no_login">未登录</string>

    <string name="home_page">主页</string>
    <string name="focus_mode">专注模式</string>
    <string name="settings">设置</string>
    <string name="feedback">反馈</string>
    <string name="drop_out">退出</string>
    <string name="title_activity_setting">SettingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
