<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home_page"/>
        <item
            android:id="@+id/nav_focus_mode"
            android:icon="@drawable/nav_focus_mode"
            android:title="@string/focus_mode"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/nav_feedback"
            android:title="@string/feedback"/>
        <item
            android:id="@+id/nav_dropout"
            android:icon="@drawable/nav_dropout"
            android:title="@string/drop_out"/>
    </group>
</menu>